# MorpheusProtocol

./: .env.example  .gitignore  README.md  cassandra.html  main.py  neo_server.py  pyproject.toml  reality_check.html
ablations/ablation-reality-check/: ablation-reality-check.yaml  example-rag-data.json
ablations/cassandra/: cassandra-ablation.yaml  example-rag-data.json
prompts/ablation-reality-check/: compliance_bot.txt  morpheus_executor.txt  morpheus_lead.txt  morpheus_strategist.txt  neo_park_keeper.txt  park_manager_desc.txt  trinity_hype.txt
prompts/cassandra/: morphus_executor.txt  morphus_lead.txt  morphus_strategist.txt  neo_description.txt  neo_lead.txt
prompts/cassandra/neo_team/: dba.txt  neo_description.txt  security_expert.txt
prompts/cassandra/persuaders/: emotional.txt  logical.txt
src/: agents.py  rag.py
src/active_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: config.py  state_keys.py
src/observability/: logger.py  observability.py
src/tools/: agent_tools.py
