
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morpheus-protocol"
version = "0.0.1"
description = "A protocol to test the system prompts of an custom build your own AI agents archetitecture"
authors = [{name = "Jonathan Coletti", email = "jonathancoletti0@gmail.com""}]
dependencies = [
    "fastapi==0.121.2",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.12.4",
    "lancedb==0.25.2",
    "pandas==2.3.3",
    "pyarrow==22.0.0",
    "google-adk[a2a]==1.18.0",
    "google-generativeai==0.8.5",
    "bandit==1.8.6",
    "python-dotenv==1.1.1",
    "tiktoken==0.12.0",
    "RestrictedPython==8.1",
    "sentence-transformers==5.1.2",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.14.0",
    "trio==0.28.0",
    "httpx==0.28.1",
    "psycopg==3.2.12",
    "termcolor==3.2.0",

]
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"